installHello/helloNamespace/helloManifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
  namespace: hello
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-v1
  namespace: hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        version: v1
    spec:
      containers:
        - name: hello
          image: jonas27/hello:v1
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-v2
  namespace: hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        version: v2
    spec:
      containers:
        - name: hello
          image: jonas27/hello:v2
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
