installHello/helloNamespace/gatewayNamespaceHello.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
  namespace: hello
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello
  namespace: hello
spec:
  host: hello.hello.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
  namespace: hello
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
    - match:
        - uri:
            prefix: /hel
        - uri:
            exact: /hello
        - uri:
            exact: /hello/hello
        - uri:
            exact: /hello/info
      route:
        - destination:
            host: hello.hello.svc.cluster.local
            #            subset: v1
            port:
              number: 3000
